# ebpf-correctness-verifier

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  prevail-smoke.yml
docs/: backend-contract.md  dependency-policy.md  heimdall-notes.md  mvp-architecture.md  reproduction-notes.md  research-survey.md  reuse-matrix.md  test-plan.md
examples/k2-xdp/: README.md
scripts/: prevail-smoke.sh  run-k2-xdp-example.sh
src/ebpf_tv/: __init__.py  cli.py
tests/: ebpf_fixtures.py  k2_cli_integration.py  k2_equiv_smoke.py  test_cli.py
tools/: k2_equiv.cc
