[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ebpf-tv"
version = "0.1.0"
description = "A thin eBPF transformation validation frontend over PREVAIL and K2-derived equivalence checks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "eunomia-bpf contributors" }
]
dependencies = []

[project.scripts]
ebpf-tv = "ebpf_tv.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
